Rui AS tags - bug fixes (#1018)
* feat(app:ccf-rui): Improve AS tag listing w/ 2 sections: 'Added' & 'Detected'

* Truncate tag when too long

* refactor(app:ccf-rui): Tweaked AS tag logic & add removed tags section

---------

--- a/apps/ccf-rui/src/app/shared/components/tag-list/tag-list.component.scss
+++ b/apps/ccf-rui/src/app/shared/components/tag-list/tag-list.component.scss
@@ -4,7 +4,7 @@
   overflow-y: auto;
   --mdc-chip-label-text-color: var(--sys-on-primary-fixed-variant);
 
-  .added-label {
+  .label {
     font: var(--sys-label-medium);
     margin-bottom: 0.25rem;
   }
@@ -15,6 +15,8 @@
 
     .mdc-evolution-chip__text-label {
       font: var(--sys-label-medium);
+      max-width: 13.75rem;
+      overflow: hidden;
     }
 
     .mat-mdc-chip {
